Closed Bug 463040 Opened 17 years ago Closed 17 years ago

PositionError named constants

Categories

(Core :: DOM: Geolocation, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: dougt, Assigned: dougt)

References

()

Details

Attachments

(1 file)

interface PositionError { const unsigned short UNKNOWN_ERROR = 0; const unsigned short PERMISSION_DENIED = 1; const unsigned short POSITION_UNAVAILABLE = 2; const unsigned short TIMEOUT = 3; .... };
Attached patch patch v.1Splinter Review
Attachment #346510 - Flags: superreview?(jst)
Attachment #346510 - Flags: review?(jst)
Attachment #346510 - Flags: superreview?(jst)
Attachment #346510 - Flags: superreview+
Attachment #346510 - Flags: review?(jst)
Attachment #346510 - Flags: review+
pushed a1364547a182.
Status: NEW → RESOLVED
Closed: 17 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: