Bug 463040 - Use Position Error Constants. r/sr=jst